--- a/src/Kavod.Vba.Compression/Kavod.Vba.Compression.csproj
+++ b/src/Kavod.Vba.Compression/Kavod.Vba.Compression.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFrameworks>net48;netstandard2.0</TargetFrameworks>
-    <Copyright>Copyright ©  2016</Copyright>
+    <Copyright>Copyright © 2016 Ross Knudsen</Copyright>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <AutoGenerateBindingRedirects>True</AutoGenerateBindingRedirects>
     <Authors>Ross Knudsen</Authors>
@@ -12,7 +12,7 @@
     <AssemblyVersion>0.0.2.0</AssemblyVersion>
     <FileVersion>0.0.2.0</FileVersion>
     <PackageProjectUrl>https://github.com/rossknudsen/Kavod.Vba.Compression</PackageProjectUrl>
-    <PackageLicenseUrl>https://raw.githubusercontent.com/rossknudsen/Kavod.Vba.Compression/master/LICENSE</PackageLicenseUrl>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <Version>0.0.2-alpha</Version>
   </PropertyGroup>
 
