--- a/src/VbaCompression/VbaCompression.csproj
+++ b/src/VbaCompression/VbaCompression.csproj
@@ -5,10 +5,10 @@
     <Copyright>Copyright © 2016 Ross Knudsen</Copyright>
     <Authors>Ross Knudsen</Authors>
     <Description>VBA uses a compression algorithm when packaging code into a VBA Project within a Microsoft Office file. The specification can be found here: https://docs.microsoft.com/en-us/openspecs/office_file_formats/ms-ovba/575462ba-bf67-4190-9fac-c275523c75fc</Description>
-    <RepositoryUrl>https://github.com/rossknudsen/Kavod.Vba.Compression</RepositoryUrl>
+    <RepositoryUrl>https://github.com/NetOfficeFw/VbaCompression.git</RepositoryUrl>
     <AssemblyVersion>0.0.2.0</AssemblyVersion>
     <FileVersion>0.0.2.0</FileVersion>
-    <PackageProjectUrl>https://github.com/rossknudsen/Kavod.Vba.Compression</PackageProjectUrl>
+    <PackageProjectUrl>https://github.com/NetOfficeFw/VbaCompression</PackageProjectUrl>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <Version>0.0.2-alpha</Version>
   </PropertyGroup>
