--- a/src/Kavod.Vba.Compression/Kavod.Vba.Compression.csproj
+++ b/src/Kavod.Vba.Compression/Kavod.Vba.Compression.csproj
@@ -6,11 +6,9 @@
     <Authors>Ross Knudsen</Authors>
     <Description>VBA uses a compression algorithm when packaging code into a VBA Project within a Microsoft Office file. The specification can be found here: https://docs.microsoft.com/en-us/openspecs/office_file_formats/ms-ovba/575462ba-bf67-4190-9fac-c275523c75fc</Description>
     <RepositoryUrl>https://github.com/NetOfficeFw/VbaCompression.git</RepositoryUrl>
-    <AssemblyVersion>0.0.2.0</AssemblyVersion>
-    <FileVersion>0.0.2.0</FileVersion>
     <PackageProjectUrl>https://github.com/NetOfficeFw/VbaCompression</PackageProjectUrl>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <Version>0.0.2-alpha</Version>
+    <Version>0.3.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
