--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,7 +2,6 @@ name: release
 
 on:
   push:
-    branches: "build"
     tags: [ 'v*.*.*' ]
 
 permissions:
@@ -26,10 +25,15 @@ jobs:
     steps:
     - name: checkout
       uses: actions/checkout@v3
+
     - name: setup dotnet
       uses: actions/setup-dotnet@v3
       with:
         dotnet-version: 7
+
+    - name: setup NuGetKeyVaultSignTool
+      if: steps.cache-dotnettools.outputs.cache-hit != 'true'
+      run: dotnet tool install --verbosity minimal --global NuGetKeyVaultSignTool --version 3.2.2
 
     - name: restore
       run: dotnet restore
@@ -43,8 +47,24 @@ jobs:
     - name: pack
       run: dotnet pack --no-build --no-restore -o dist
 
-    - name: publish artifact
-      uses: actions/upload-artifact@v3
-      with:
-        name: VbaCompression_build_${{ github.run_id }}
-        path: '${{ github.workspace }}/dist'
+    - name: sign
+      id: sign_package
+      working-directory: '${{ github.workspace}}/dist'
+      run: |
+          NuGetKeyVaultSignTool.exe sign *.nupkg `
+          --file-digest sha256 `
+          --timestamp-rfc3161 http://timestamp.digicert.com `
+          --timestamp-digest sha256 `
+          --azure-key-vault-url "${{ secrets.KEYVAULT_URL }}" `
+          --azure-key-vault-tenant-id "${{ secrets.KEYVAULT_TENANT_ID }}" `
+          --azure-key-vault-client-id "${{ secrets.KEYVAULT_CLIENT_ID }}" `
+          --azure-key-vault-client-secret "${{ secrets.AZURESIGNTOOL_CLIENT_SECRET }}" `
+          --azure-key-vault-certificate "goITSolutions-until-2024-01"
+
+    - name: publish
+      if: ${{ steps.sign_package.outcome == 'success' }}
+      working-directory: '${{ github.workspace}}/dist'
+      run: |
+          dotnet nuget push "*.nupkg" --api-key $env:NUGET_PUSH_KEY --source https://api.nuget.org/v3/index.json
+      env:
+        NUGET_PUSH_KEY: ${{ secrets.NUGET_PUSH_KEY }}
