--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,7 +5,7 @@ on:
     tags: [ 'v*.*.*' ]
 
 permissions:
-  contents: read
+  contents: write
 
 env:
   DOTNET_NOLOGO: 1
@@ -68,3 +68,10 @@ jobs:
           dotnet nuget push "*.nupkg" --api-key $env:NUGET_PUSH_KEY --source https://api.nuget.org/v3/index.json
       env:
         NUGET_PUSH_KEY: ${{ secrets.NUGET_PUSH_KEY }}
+
+    - name: release
+      uses: softprops/action-gh-release@de2c0eb89ae2a093876385947365aca7b0e5f844 # v1, v0.1.15
+      if: always() && startsWith(github.ref, 'refs/tags/')
+      with:
+        name: 'VbaCompression ${{ github.ref_name }}'
+        body_path: ${{ github.workspace }}/src/Kavod.Vba.Compression/README.md
