--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,10 +31,6 @@ jobs:
       with:
         dotnet-version: 7
 
-    - name: setup NuGetKeyVaultSignTool
-      if: steps.cache-dotnettools.outputs.cache-hit != 'true'
-      run: dotnet tool install --verbosity minimal --global NuGetKeyVaultSignTool --version 3.2.2
-
     - name: restore
       run: dotnet restore
 
@@ -46,6 +42,32 @@ jobs:
 
     - name: pack
       run: dotnet pack --no-build --no-restore -o dist
+
+    - name: publish artifact
+      uses: actions/upload-artifact@v3
+      with:
+        name: VbaCompression_packages
+        path: '${{ github.workspace }}/dist'
+
+  sign:
+    needs: build
+    runs-on: windows-2022
+
+    steps:
+    - name: download artifact
+      uses: actions/download-artifact@v3
+      with:
+        name: VbaCompression_packages
+        path: '${{ github.workspace }}/dist'
+
+    - name: setup dotnet
+      uses: actions/setup-dotnet@v3
+      with:
+        dotnet-version: 7
+
+    - name: setup NuGetKeyVaultSignTool
+      if: steps.cache-dotnettools.outputs.cache-hit != 'true'
+      run: dotnet tool install --verbosity minimal --global NuGetKeyVaultSignTool --version 3.2.2
 
     - name: sign
       id: sign_package
