--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -47,7 +47,9 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: VbaCompression_packages
-        path: '${{ github.workspace }}/dist'
+        path: |
+          ${{ github.workspace }}/dist
+          ${{ github.workspace }}/src/Kavod.Vba.Compression/README.md
 
   sign:
     needs: build
@@ -96,4 +98,4 @@ jobs:
       if: always() && startsWith(github.ref, 'refs/tags/')
       with:
         name: 'VbaCompression ${{ github.ref_name }}'
-        body_path: ${{ github.workspace }}/src/Kavod.Vba.Compression/README.md
+        body_path: ${{ github.workspace }}/dist/README.md
