--- a/src/Kavod.Vba.Compression/Kavod.Vba.Compression.csproj
+++ b/src/Kavod.Vba.Compression/Kavod.Vba.Compression.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <PackageId>NetOfficeFw.VbaCompression</PackageId>
-    <VersionPrefix>0.3.1</VersionPrefix>
+    <Version>0.3.2</Version>
     <TargetFrameworks>net48;netstandard2.0;net6.0</TargetFrameworks>
     <Copyright>Copyright © 2016 Ross Knudsen</Copyright>
     <Authors>Ross Knudsen</Authors>
