--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -60,7 +60,7 @@ jobs:
       uses: actions/download-artifact@v3
       with:
         name: VbaCompression_packages
-        path: '${{ github.workspace }}/dist'
+        path: ${{ github.workspace }}
 
     - name: setup dotnet
       uses: actions/setup-dotnet@v3
@@ -98,4 +98,4 @@ jobs:
       if: always() && startsWith(github.ref, 'refs/tags/')
       with:
         name: 'VbaCompression ${{ github.ref_name }}'
-        body_path: ${{ github.workspace }}/dist/README.md
+        body_path: ${{ github.workspace }}/src/Kavod.Vba.Compression/README.md
