--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <VersionPrefix>0.4.0</VersionPrefix>
+    <TargetFrameworks>net462;net48;net6.0;net7.0;net8.0</TargetFrameworks>
   </PropertyGroup>
 
   <PropertyGroup>
