--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -93,7 +93,7 @@ jobs:
         NUGET_PUSH_KEY: ${{ secrets.NUGET_PUSH_KEY }}
 
     - name: release
-      uses: softprops/action-gh-release@de2c0eb89ae2a093876385947365aca7b0e5f844 # v1, v0.1.15
+      uses: softprops/action-gh-release@v2
       if: always() && startsWith(github.ref, 'refs/tags/')
       with:
         name: 'VbaCompression ${{ github.ref_name }}'
