--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,8 +18,7 @@ env:
   RepositoryCommit: '${{ github.sha }}'
 
 jobs:
-  build:
-
+  release:
     runs-on: ubuntu-22.04
 
     steps:
@@ -51,41 +50,7 @@ jobs:
           ${{ github.workspace }}/dist
           ${{ github.workspace }}/src/Kavod.Vba.Compression/README.md
 
-  sign:
-    needs: build
-    runs-on: windows-2022
-
-    steps:
-    - name: download artifact
-      uses: actions/download-artifact@v4
-      with:
-        name: VbaCompression_packages
-        path: ${{ github.workspace }}
-
-    - name: setup dotnet
-      uses: actions/setup-dotnet@v4
-      with:
-        dotnet-version: 6
-
-    - name: setup NuGetKeyVaultSignTool
-      run: dotnet tool install --verbosity minimal --global NuGetKeyVaultSignTool --version 3.2.3
-
-    - name: sign
-      id: sign_package
-      working-directory: '${{ github.workspace}}/dist'
-      run: |
-          NuGetKeyVaultSignTool.exe sign *.nupkg `
-          --file-digest sha256 `
-          --timestamp-rfc3161 http://timestamp.digicert.com `
-          --timestamp-digest sha256 `
-          --azure-key-vault-url "${{ secrets.KEYVAULT_URL }}" `
-          --azure-key-vault-tenant-id "${{ secrets.KEYVAULT_TENANT_ID }}" `
-          --azure-key-vault-client-id "${{ secrets.KEYVAULT_CLIENT_ID }}" `
-          --azure-key-vault-client-secret "${{ secrets.AZURESIGNTOOL_CLIENT_SECRET }}" `
-          --azure-key-vault-certificate "goITSolutions-until-2024-01"
-
     - name: publish
-      if: ${{ steps.sign_package.outcome == 'success' }}
       working-directory: '${{ github.workspace}}/dist'
       run: |
           dotnet nuget push "*.nupkg" --api-key $env:NUGET_PUSH_KEY --source https://api.nuget.org/v3/index.json
