Install required .NET Core releases

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,7 +35,11 @@ jobs:
     - name: setup dotnet
       uses: actions/setup-dotnet@v4
       with:
-        dotnet-version: 8
+        dotnet-version: |
+          6
+          7
+          8
+          9
 
     - name: restore
       run: dotnet restore
