--- a/src/Kavod.Vba.Compression.Tests/Kavod.Vba.Compression.Tests.csproj
+++ b/src/Kavod.Vba.Compression.Tests/Kavod.Vba.Compression.Tests.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFrameworks>net48;net8.0</TargetFrameworks>
+    <TargetFrameworks Condition=" '$(TestNetCoreOnly)' == 'true' ">net8.0</TargetFrameworks>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
