--- a/.editorconfig
+++ b/.editorconfig
@@ -14,3 +14,7 @@ insert_final_newline = false
 indent_style = space
 indent_size = 2
 insert_final_newline = true
+
+## xunit configuration
+# Warning xUnit1004: Test methods should not be skipped
+dotnet_diagnostic.xUnit1004.severity = none
