--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,6 +5,7 @@ on:
     tags: [ 'v*.*.*' ]
 
 permissions:
+  id-token: write
   contents: write
 
 env:
@@ -20,6 +21,10 @@ env:
 jobs:
   release:
     runs-on: ubuntu-22.04
+
+    environment:
+      name: production
+      url: https://www.nuget.org/packages/NetOfficeFw.VbaCompression
 
     steps:
     - name: checkout
@@ -50,12 +55,18 @@ jobs:
           ${{ github.workspace }}/dist
           ${{ github.workspace }}/src/Kavod.Vba.Compression/README.md
 
+    - name: authenticate nuget.org
+      uses: NuGet/login@v1
+      id: nuget
+      with:
+        user: ${{ secrets.NUGET_PUSH_USER }}
+
     - name: publish
       working-directory: '${{ github.workspace}}/dist'
       run: |
-          dotnet nuget push "*.nupkg" --api-key "$NUGET_PUSH_KEY" --source https://api.nuget.org/v3/index.json
+          dotnet nuget push "*.nupkg" --api-key "$NUGET_API_KEY" --source https://api.nuget.org/v3/index.json
       env:
-        NUGET_PUSH_KEY: ${{ secrets.NUGET_PUSH_KEY }}
+        NUGET_API_KEY: ${{ steps.nuget.outputs.NUGET_API_KEY }}
 
     - name: release
       uses: softprops/action-gh-release@v2
