--- a/src/Kavod.Vba.Compression.Tests/Kavod.Vba.Compression.Tests.csproj
+++ b/src/Kavod.Vba.Compression.Tests/Kavod.Vba.Compression.Tests.csproj
@@ -1,8 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net48;net8.0</TargetFrameworks>
-    <TargetFrameworks Condition=" '$(TestNetCoreOnly)' == 'true' ">net8.0</TargetFrameworks>
+    <TargetFrameworks>net10.0</TargetFrameworks>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
