--- a/.github/workflows/labels.yml
+++ b/.github/workflows/labels.yml
@@ -2,7 +2,7 @@ name: labels
 
 on:
   push:
-    branches: main
+    branches: [ main ]
     paths:
       - '.github/labels.json'
   workflow_dispatch:
